<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DossierPatientActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/Dossier_patient"
            android:textColor="@color/Blue_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPCin"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineATCPers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewATCDsperso"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineATCFam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewATCDsfami"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineFctRisq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewFactRisq"
            android:orientation="horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVacci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVaccin"
            android:orientation="horizontal" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="47dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guideline3"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/nom_complet"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewPNomComplet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guideline3"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Nom Complet "
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/num_téléphone"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewPNumTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPNomComplet"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Num de telephone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Age"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewPAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPNumTel"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Age "
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/cin"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewPCin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPAge"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Cin "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineCin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/ATCDs_personnels"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewATCDsperso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineCin"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:inputType="textMultiLine"
            android:text="ATCDs personnels "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineATCPers"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/ATCDs_familiaux"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewATCDsfami"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineATCPers"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="ATCDs familiaux "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineATCFam"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Facteurs_risques"
            android:textColor="@color/Blue_dark" />

        <TextView
            android:id="@+id/textViewFactRisq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineATCFam"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Facteurs de risques "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineFctRisq"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/Vaccination"
            android:textColor="@color/Blue_dark" />


        <TextView
            android:id="@+id/textViewVaccin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineFctRisq"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/textView10"
            android:text="Vaccinations "
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextAjoutVAcc"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_below="@+id/guidelineVacci"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custum_edittext_background"
            android:hint="@string/Vaccination"
            android:textSize="15sp" />

        <Button

            android:id="@+id/AjoutVacciBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guidelineVacci"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@+id/editTextAjoutVAcc"
            android:background="@drawable/custtom_button_back"
            android:text="@string/Ajouter_vaccination"
            android:textAllCaps="false"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editTextAjoutATCDPerso"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextAjoutVAcc"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custum_edittext_background"
            android:hint="@string/ATCDs_personnels"
            android:textSize="15sp" />

        <Button
            android:id="@+id/AjoutATCDsPerso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AjoutVacciBtn"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/editTextAjoutATCDPerso"
            android:background="@drawable/custtom_button_back"
            android:text="@string/Ajouter_ATCDs_Personnels"
            android:textAllCaps="false"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editTextAjoutATCDFami"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextAjoutATCDPerso"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custum_edittext_background"
            android:hint="@string/ATCDs_familiaux"
            android:textSize="15sp" />

        <Button
            android:id="@+id/AjoutATCDsFamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AjoutATCDsPerso"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/editTextAjoutATCDFami"
            android:background="@drawable/custtom_button_back"
            android:text="@string/Ajouter_ATCD_familiaux"
            android:textAllCaps="false"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/editTextAjoutFactRisque"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextAjoutATCDFami"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custum_edittext_background"
            android:hint="@string/Facteurs_risques"
            android:textSize="15sp" />

        <Button
            android:id="@+id/AjoutFactRisque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AjoutATCDsFamil"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/editTextAjoutFactRisque"
            android:background="@drawable/custtom_button_back"
            android:text="@string/Ajouter_facteur_risque"
            android:textAllCaps="false"
            android:textSize="12dp" />


    </RelativeLayout>
</ScrollView>