<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedecinRegisterActivity"
    android:background="@drawable/gradient_background">


    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/custum_edittext_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        android:hint="@string/nom_complet"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumOrdre"
        app:layout_constraintStart_toStartOf="@+id/editTextNumOrdre"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumOrdre" />

    <EditText
        android:id="@+id/editTextNumTel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/custum_edittext_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/num_téléphone"
        android:inputType="number"
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <EditText
        android:id="@+id/editTextRegistationEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/custum_edittext_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumTel"
        app:layout_constraintStart_toStartOf="@+id/editTextNumTel"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumTel" />




    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custtom_button_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/enregistrer"
        android:textSize="18sp"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextRegistratonPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextRegistratonPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRegistratonPassword" />

    <EditText
        android:id="@+id/editTextTextRegistratonPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/custum_edittext_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegistationEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegistationEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistationEmail" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumOrdre"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/custum_edittext_background"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/Num_ordre"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>